[gd_scene load_steps=14 format=2]

[ext_resource path="res://COP.png" type="Texture" id=1]
[ext_resource path="res://cop.gd" type="Script" id=2]
[ext_resource path="res://heysound.mp3" type="AudioStream" id=3]
[ext_resource path="res://hiteffect.mp3" type="AudioStream" id=4]
[ext_resource path="res://hurtsound.mp3" type="AudioStream" id=5]
[ext_resource path="res://punchanimate.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("attackbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "attack"
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("attackbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2, 1, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]
resource_name = "death"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "die"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "look"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3, 5, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 270.0, 141.0, 360.0 ]
}

[node name="cop" type="KinematicBody2D" groups=["opp"]]
script = ExtResource( 2 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 1, 0, 0, 0.196078 )
polygon = PoolVector2Array( 166, -32, 170, 0, 167, 32, -1, 0 )

[node name="circle" type="Polygon2D" parent="."]
position = Vector2( -95, 2 )
color = Color( 1, 0, 0, 0.196078 )
polygon = PoolVector2Array( 82, -43, 63, -30, 54, -13, 54, 10, 64, 30, 82, 41, 107, 41, 124, 31, 136, 9, 136, -14, 127, -30, 107, -43 )

[node name="Character" type="Sprite" parent="."]
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource( 2 )

[node name="attackbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackbox"]
position = Vector2( 22, 0 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/attack = SubResource( 6 )
anims/death = SubResource( 4 )
anims/look = SubResource( 7 )

[node name="RayCast2D" type="RayCast2D" parent="."]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 170 )
collision_mask = 5
collide_with_areas = true

[node name="RayCast2D2" type="RayCast2D" parent="."]
rotation = -1.39626
enabled = true
cast_to = Vector2( 0, 170 )
collision_mask = 5
collide_with_areas = true

[node name="RayCast2D3" type="RayCast2D" parent="."]
rotation = -1.74533
enabled = true
cast_to = Vector2( 0, 170 )
collision_mask = 5
collide_with_areas = true

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="hey" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 5, 0 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
hframes = 4
frame = 1

[node name="walker" type="Timer" parent="."]

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="attackbox" to="." method="_on_attackbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="walker" to="." method="_on_walker_timeout"]
